# moshpit-docs

./: .buildinfo  .gitignore  .readthedocs.yml  Makefile  README.md  genindex.html  intro.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: ci.yml
_sources/: intro.md
_sources/chapters/: 00_data_retrieval.md  00_setup.md  functional-annotation.md  taxonomic-classification.md
book/: myst.yml  q2doc.bib  tutorial.md
book/data/: bray-curtis-emperor.qzv  contigs.qzv
chapters/: 00_data_retrieval.html  00_setup.html  filtering.html  functional-annotation.html  mag-recovery.html  markdown.html  notebooks.html  taxonomic-classification.html
chapters/01_filtering/: host-filtering.html  intro.html  quality-filtering.html  tutorial.html
chapters/02_mag_reconstruction/: abundance.html  dereplication.html  intro.html  reconstruction.html
chapters/03_taxonomic_classification/: intro.html  mags.html  reads.html  tutorial-mags.html  tutorial-reads.html
chapters/04_functional_annotation/: intro.html  mags.html
chapters/05_interoperability/: export.html  import.html  intro.html
docs/: authors.yml  intro.md  myst.yml
docs/data/: demux-summarize.qzv  ids.tsv  mags.qzv  metadata.tsv
docs/refs/: glossary.md
environment-files/: readthedocs.yml
moshpit_docs/: _config.yml  _toc.yml  intro.md
moshpit_docs/chapters/: 00_data_retrieval.md  00_setup.md  functional-annotation.md  mag-recovery.md  taxonomic-classification.md
moshpit_docs/data/: kaiju-filtered.qzv  mags-derep-bar-plot-90.qzv  mags-derep-taxa-bar-plot.qzv  (+1 more)
(+266 files in other folders)
